ncp-features-example/2.1.2-matchexpression-with-networkpolicy/nginx-demo-deployments.yml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod
  labels:
    feature: client
spec:
  containers:
  - name: ubuntu
    image: tutum/ubuntu:trusty
    imagePullPolicy: IfNotPresent
    ports:
    - name: ssh
      containerPort: 22
