ncp-features-example/2.1.2-matchexpression-with-networkpolicy/nginx-web-deployments.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-matchexpression-with-networkpolicy
  namespace: ncp-feature
  labels:
    feature: matchexpression-with-networkpolicy 
spec:
  replicas: 3
  selector:
    matchLabels:
      feature: matchexpression-with-networkpolicy       
  template:
    metadata:
      labels:
        feature: matchexpression-with-networkpolicy 
    spec:
      containers:
      - name: nginx-matchexpression-with-networkpolicy 
        image: nginx
        ports:
        - containerPort: 80
