ncp-features-example/2.1.2-matchexpression-with-networkpolicy/nginx-web-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-web-matchexpression-with-networkpolicy
  namespace: ncp-feature
  labels:
    feature: matchexpression-with-networkpolicy
spec:
  podSelector:
    matchExpressions:
      - {key: feature, operator: In, values: [matchexpression-with-networkpolicy, client]}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - {key: feature, operator: In, values: [client]}
    ports:
    - protocol: TCP
      port: 80
